--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome, Wellness Warrior! 💧</title>
+  <title>Welcome, Pelvic Powerhouse! 🌀</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     /* Universal box-sizing for consistent layout, including padding and border in element's total width */
